# fastlamp

./: .gitignore  README.md  check_files.py  convert_id.py  eliminate_comb.py  exp2ratio.py  fastwy.py  flower.py  gsea4csv.py  lamp.py  merge_exp_csv.py  pyproject.toml  ratio2flag.py  readFile.py  test_lamp.py  transaction.py
.cursor/rules/: git-conventions.mdc  python-uv.mdc
flower/: flower_readfile.py  flower_svg.py
frepattern/: frequentPatterns.py  nodeClass.py
functions/: functions4chi.py  functions4fisher.py  functions4u_test.py  functionsSuper.py  pvalTable.py
lcm53/: makefile
lcm53/sample/: benchmark_item.csv.4lcm53
sample/: benchmark_item.csv  benchmark_value.csv
tests/: __init__.py  generate_benchmark_data.py  performance_config.py  performance_graph_utils.py  test_lamp.py
