[project]
name = "fastlamp"
version = "0.1.0"
description = "A tool for frequent pattern mining in gene expression data."
authors = [
    { name = "nkimoto", email = "kimoppy126@gmail.com" },
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.1.0,<2.2.0",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "scipy>=1.16.0",
    "setuptools>=80.9.0",
]

[project.urls]
"Original Repository" = "https://github.com/a-terada/lamp"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
